Der Eine Ring/sheet.css
@font-face {
    font-family: "dum1";
    src: url("https://github.com/stuartj/roll20-character-sheets/raw/master/The%20One%20Ring/assets/fonts/dum1.ttf");
}

* {
    font-family: dum1, "Dumbledor 1", "Helvetica Neue",Helvetica,Arial,sans-serif;
    font-weight: normal;
}

.charsheet {
    background: white;
    text-align: center;
}

.sheet-isPC {
    margin-right: 5px;
}

.sheet-isNPC,
.sheet-isAdversary {
    margin: 0 5px 0 20px;
}

.sheet-main {
    display: inline-block;
    text-align: left;
}

.sheet-pc-wrapper {
    margin-left:-175px;
    margin-right:-175px;
}

.sheet-npc,
.sheet-adversary {
    min-width: 500px;
}

.sheet-pc {
    min-width: 500px;
    background:url('https://raw.githubusercontent.com/stuartj/roll20-character-sheets/master/The%20One%20Ring/assets/images/parchment.jpg');
    border:250px solid transparent;
	border-image:url('https://raw.githubusercontent.com/stuartj/roll20-character-sheets/master/The%20One%20Ring/assets/images/character_sheet_frame.png') 457 repeat;
}

.sheet-logo {
    text-align: center;
    margin-bottom: 30px;
    margin-top: -175px;
}

label {
    margin-bottom: 0;
    display: inline !important;
    line-height: 26px;
    padding: 0 !important;
}

.sheet-pod,
.sheet-pod label {
    text-align: center !important;
}

h2 {
    /*font-family: 'Copperplate';*/
    font-size: 16px;
    font-weight: bold;
    text-align: center;
    letter-spacing: 2px;
    text-transform: uppercase;
    margin-top: 36px;
}

button[type=roll] {
    background: transparent;
    border: none;
    -webkit-box-shadow: none;
    -moz-box-shadow: none;
    box-shadow: none;
    opacity: 1;
    padding: 0;
    margin: 0 5px;
    outline: none;
}

button[type=roll]:hover {
    opacity: .5;
}

/* change D20 to system-appropriate D12 */
button[type=roll]:before {
    font-family: "dicefontd12" !important;
    content: "0" !important;
}

input,
textarea {
    border: none;
    -webkit-box-shadow: none;
    -moz-box-shadow: none;
    box-shadow: none;
    background: rgba(255,255,255,.5);
    box-sizing: border-box;
    -moz-box-sizing: border-box;
}

input:hover,
textarea:hover,
input:focus,
textarea:focus {
    background: rgba(255,255,255,1);
}

input[type="text"],
input[type="number"],
input.sheet-number {
    background: none !important;
    border-radius: 0;
    border-bottom: 2px solid rgba(0,0,0,.15);
}

input.sheet-number {
    width: 3.5em !important;
}

textarea {
    border: 2px solid rgba(0,0,0,.15);
}

input[type="text"] {
    /*width: 100%;*/
}

input[type="checkbox"]:checked + input[type="number"],
input[type="checkbox"]:checked + input[type="text"],
input[type="checkbox"]:checked + label,
input[type="checkbox"]:checked + span {
    text-decoration: underline;
}


.sheet-4colrow .sheet-col {
    width: 24%;
}

.sheet-3colrow {
}

.sheet-2colrow {
}

.sheet-1colrow {
}

table.sheet-wide {
    width: 100%;
}

table.sheet-wide-PC {
    width: 100%;
}

td.sheet-label-cell {
    width: 20%;
}

td {
    vertical-align: top;
}

td.sheet-small {
    width: 1%;
    white-space: nowrap;
}

textarea {
    text-align: left !important;
}

.sheet-attribute {
    position: relative;
}

.sheet-attribute label {
    line-height: 50px;
    text-align: right !important;
    display: block !important;
}

.sheet-attribute input {
    border: 2px solid #000;
    width: 60px !important;
    height: 60px !important;
    border-radius: 100%;
    text-align: center;
    font-size: 24px;
    background: white;
    padding-bottom: 10px !important;
}

.sheet-attribute-favoured label {
    line-height: 40px;
    text-align: right !important;
    display: block !important;
    margin-top: -25px;
}

.sheet-attribute-favoured input {
    border: 2px solid #000;
    width: 40px !important;
    height: 40px !important;
    border-radius: 100%;
    float: none !important;
    margin-top: -30px;
    margin-left: -10px;
    background:url('https://raw.githubusercontent.com/stuartj/roll20-character-sheets/master/The%20One%20Ring/assets/images/parchment.jpg') !important;
    text-align: center;
    font-size: 18px;
}

.sheet-group-attrs-skills {
    width: 100%;
}

.sheet-group-attrs-skills td {
    position: relative;
    padding: 1px 10px;
}

.sheet-group-attrs-skills input[type=checkbox] {
    position: absolute;
    top: 5px;
    height: 20px;
    width: 85px;
    opacity: 0;
    /*outline: 1px solid red;*/
}

.sheet-group-attrs-skills input[type=number] {
    float: right;
}

.sheet-skill-groups,
.sheet-attr-group-skills td:last-child {
    padding-left: 60px !important;
}

[name*="attr_gear_name"] {
    width: 100%;
}

.sheet-nowrap {
    white-space: nowrap;
}

.sheet-weapon-skills tr td:nth-child(2) input {
    display: inline-block;
}

.sheet-weapon-skills tr td:nth-child(2) input[type=text] {
    margin-left: 5px;
    width: 190px
}

.sheet-weapon-skills tr td:nth-child(2) input:checked + input {
    text-decoration: underline
}

.sheet-combat-values label,
.sheet-combat-values input {
    display: block;
}

.sheet-combat-values input {
    text-align: center;
}

.sheet-combat-values td {
    padding: 0 10px
}

.sheet-combat {
    width: 100%;
}

.sheet-armour-container {
    position: relative;
}

.sheet-armour-container button {
    position: absolute;
    bottom: 4px;
    right: 0;
}

.sheet-gear-list {
}

.sheet-gear-enc {
    padding: 0 5px;
}

.sheet-gear-list td:nth-child(2) {
    padding-right: 20px
}

.sheet-weapon-skills tbody td {
    padding: 0 5px;
}

.sheet-weapon-skills .sheet-number {
    width: 30px !important;
}

[name*='attr_weapon_skill_name'] {
    width: 160px !important;
}

[name*='attr_weapon_called_shot'] {
    width: 100px !important;
}

.sheet-center,
.sheet-center label {
    text-align: center;
}

.sheet-section-heading {
    text-align: center !important;
    text-transform: uppercase;
    letter-spacing: 4px;
    padding: 20px 0;
}

/******* NPC *******/

.sheet-isAdversary:checked~.sheet-pc,
.sheet-isAdversary:checked~.sheet-lm-character,
.sheet-isPC:checked~.sheet-adversary,
.sheet-isPC:checked~.sheet-lm-character,
.sheet-isNPC:checked~.sheet-adversary,
.sheet-isNPC:checked~.sheet-pc {
    display: none;
}

.sheet-isNPC {
    display: inline-block;
}

.sheet-weapon-skill-row input[checked] + label {
    text-decoration: underline
}

.sheet-npc label.sheet-name {
    width: 218px;
}

[name=attr_npc_weapon_skill_name] {
    width: 140px;
}

[name=attr_npc_weapon_edge] {
    width: 3.5em;
}

[name=attr_npc_weapon_called_shot] {
    width: 90px;
}

.sheet-npc .sheet-npc-weapon-labels label {
    display: inline-block !important;
}

.sheet-npc label.sheet-name {
    width: 140px;
    margin-left: 48px;
}

.sheet-npc label.sheet-rating,
.sheet-npc label.sheet-damage,
.sheet-npc label.sheet-edge,
.sheet-npc label.sheet-injury {
    width: calc(3.5em + 4px);
}

.sheet-npc label.sheet-called-shot {
    width: 100px;
}


/*
    Dots
 */


td.sheet-attr-skill-wrapper,
td.sheet-attr-skill-group {
    position: relative;
}

.sheet-dots {
    display: inline-block;
    position: absolute;
    top: 2px;
    right: 0;
}

.sheet-dots input[type="radio"] + span {
    display: inline-block;
    vertical-align: top;
    position: relative;
}

.sheet-dots input[type='radio'] {
    opacity:0;
    position:absolute;
    z-index: 1;
    cursor:pointer;
}

.sheet-dots input[type='radio'] + span {
    height: 8px;
    width: 8px;
    display:inline-block;
    padding: 0 0 0 0px;
    vertical-align:middle;
    margin-bottom: 2px;
}

.sheet-dots input[type="radio"]:not([value="0"]) + span {
    background: url("https://raw.githubusercontent.com/stuartj/roll20-character-sheets/master/The%20One%20Ring/assets/images/square-filled.png") no-repeat;
    background-size:100%;
}

.sheet-dots input[type='radio']:checked ~ input[type='radio'] + span {
    background: url("https://raw.githubusercontent.com/stuartj/roll20-character-sheets/master/The%20One%20Ring/assets/images/square-empty.png") no-repeat;
    background-size:100%;
}

.sheet-dots input[type="radio"][value="0"] + span:before {
    content: "x";
    font-size: 11px;
    position: relative;
    top: -5px;
    left: 1px;
    opacity: 0;
}

.sheet-dots:hover input[type="radio"][value="0"] + span:before {
    opacity: 1;
}

.sheet-attr-skill-group .sheet-dots input[type='radio'] + span {
    height: 12px;
    width: 12px;
    top: -2px;
}

.sheet-attr-skill-group .sheet-dots input[type="radio"]:not([value="0"]) + span {
    background: url("https://raw.githubusercontent.com/stuartj/roll20-character-sheets/master/The%20One%20Ring/assets/images/diamond-filled.png") no-repeat;
    background-size:100%;
}

.sheet-attr-skill-group .sheet-dots input[type='radio']:checked ~ input[type='radio'] + span {
    background: url("https://raw.githubusercontent.com/stuartj/roll20-character-sheets/master/The%20One%20Ring/assets/images/diamond-empty.png") no-repeat;
    background-size:100%;
}


.sheet-hover-info {
    position: absolute;
    background: white;
    z-index: 10;
    padding: 20px;
    width: 200px;
    display: none;
    opacity: 0;
    box-shadow: 0 3px 15px rgba(0,0,0,.1);
    transition: display 0s ease-in-out, opacity 1s ease-in-out 2s;
}

label:hover + .sheet-hover-info,
input:hover + label + .sheet-hover-info {
    display: block;
    opacity: 1;
    transition: display 0s ease-in-out, opacity 1s ease-in-out 2s;
}

.sheet-attr-skill-group .sheet-hover-info  {
    margin-left: -100px;
}

.sheet-valour .sheet-hover-info,
.sheet-wisdom  .sheet-hover-info {
    margin-left: -65px;
}

.sheet-attr-skill-wrapper .sheet-hover-info {
    width: 300px;
}

.attr_background {
    height: 300px;
}

select {
    width: 110px;
}

/* WIP - trying to get larger font */
span.sheet-label {
    font-weight: normal;
    font-size: 18px;
}

table.sheet-group-attrs-skills span.sheet-label {
    font-weight: normal;
    font-size: 16px;
}

tr.sheet-attr-group-skills td {
    vertical-align: bottom;
}

.sheet-wide-PC td.sheet-small {
    vertical-align: bottom;
}

tr.sheet-attr-group-skills td.sheet-attr-skill-wrapper button[type=roll] {
    margin-right: 0px;
}

.sheet-pc input[type=text] {
    font-size: 20px;
    color: darkred;
    padding-bottom: 1px;
    margin-left: 5px;
}

/* copied from above to keep WIP work together */
[name*='attr_weapon_skill_name'] {
    width: 140px !important;
}

/* WIP - trying to move experience/valour etc. */

td#sheet-upper-right-section {
	padding-left: 45px;
	vertical-align: top;
}

.sheet-rating-wrapper {
	width:90px;
	height:105px;
}

.sheet-rating-wrapper span.sheet-label {
	text-align: center;
	display: inline-block;
	font-size: 18px;
	width: 100%;
}

.sheet-rating-wrapper img {
	width:84px;
	height:84px;
	position:relative;
	z-index: 0;
}

.sheet-rating-wrapper input {
	width:50px;
	height:50px;
	top:-65px;
	left:13px;
	position: relative;
	z-index: 1;
	font-size:32px;
	text-align: center;
	border:none;
	background-color: transparent;
	font-family: Helvetica;
	color:saddlebrown;
}

.sheet-rating-wrapper .sheet-nw-sub-rating {
  border-radius: 100%;
  background: url('https://raw.githubusercontent.com/stuartj/roll20-character-sheets/master/The%20One%20Ring/assets/images/parchment.jpg') !important;
  width: 33px;
  height: 28px;
  border: 2px solid black;
  font-size:16px;
  position:relative;
  top:-130px;
  left:-0px;
  z-index: 1;
}

.sheet-rating-wrapper button {
    position: relative;
    top: -100px;
    left: -60px;
}

table.sheet-wide-PC-container {
    width: 100%;
}

